[package]
name = "quasar-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dashmap = "5"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_jcs = "0.1"
dotenvy = "0.15"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
jsonwebtoken = "9"

[lints.clippy]
redundant_clone = "warn"
manual_ok_or = "warn"
needless_collect = "warn"
